tests/rosetta/out/Dart/array-concatenation.dart
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:15Z
List<int> concatInts(List<int> a, List<int> b) {
  List<int> out = [];
  for (var v in a) {
    out = List.from(out)..add(v);
  }
  for (var v in b) {
    out = List.from(out)..add(v);
  }
  return out;
}

List<any> concatAny(List<any> a, List<any> b) {
  List<any> out = [];
  for (var v in a) {
    out = List.from(out)..add(v);
  }
  for (var v in b) {
    out = List.from(out)..add(v);
  }
  return out;
}

var a = [1, 2, 3];

var b = [7, 12, 60];

List<any> i = [1, 2, 3];

List<any> j = ['Crosby', 'Stills', 'Nash', 'Young'];

var l = [1, 2, 3];

var m = [7, 12, 60];

void main() {
  print(concatInts(a, b).toString());
  print(concatAny(i, j).toString());
  print(concatInts(l, m).toString());
}

bool _equal(dynamic a, dynamic b) {
    if (a is List && b is List) {
        if (a.length != b.length) return false;
        for (var i = 0; i < a.length; i++) { if (!_equal(a[i], b[i])) return false; }
        return true;
    }
    if (a is Map && b is Map) {
        if (a.length != b.length) return false;
        for (var k in a.keys) { if (!b.containsKey(k) || !_equal(a[k], b[k])) return false; }
        return true;
    }
    return a == b;
}

String _formatDuration(Duration d) {
    if (d.inMicroseconds < 1000) return '${d.inMicroseconds}µs';
    if (d.inMilliseconds < 1000) return '${d.inMilliseconds}ms';
    return '${(d.inMilliseconds/1000).toStringAsFixed(2)}s';
}

void _json(dynamic v) {
    print(jsonEncode(v));
}


dynamic _min(dynamic v) {
    List<dynamic>? list;
    if (v is List) list = v;
    else if (v is Map && v['items'] is List) list = (v['items'] as List);
    else if (v is Map && v['Items'] is List) list = (v['Items'] as List);
    else { try { var it = (v as dynamic).items; if (it is List) list = it; } catch (_) {} }
    if (list == null || list.isEmpty) return 0;
    var m = list[0];
    for (var n in list) { if ((n as Comparable).compareTo(m) < 0) m = n; }
    return m;
}

num _sum(dynamic v) {
    Iterable<dynamic>? list;
    if (v is Iterable) list = v;
    else if (v is Map && v['items'] is Iterable) list = (v['items'] as Iterable);
    else if (v is Map && v['Items'] is Iterable) list = (v['Items'] as Iterable);
    else { try { var it = (v as dynamic).items; if (it is Iterable) list = it; } catch (_) {} }
    if (list == null) return 0;
    num s = 0;
    for (var n in list) s += (n as num);
    return s;
}

bool _runTest(String name, void Function() f) {
    stdout.write('   test $name ...');
    var start = DateTime.now();
    try {
        f();
        var d = DateTime.now().difference(start);
        stdout.writeln(' ok (${_formatDuration(d)})');
        return true;
    } catch (e) {
        var d = DateTime.now().difference(start);
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        return false;
    }
}
